src/util/snapshots/betterletter__util__iteration__tests__test_power_set-[]-true.snap
---
source: src/util/iteration.rs
expression: result
info:
  collection: []
  include_empty_set: true
---
- []

