src/util/snapshots/betterletter__util__iteration__tests__test_power_set-[_1,_2,_3,_]-true.snap
---
source: src/util/iteration.rs
expression: result
info:
  collection:
    - 1
    - 2
    - 3
  include_empty_set: true
---
- []
- - 1
- - 2
- - 3
- - 1
  - 2
- - 1
  - 3
- - 2
  - 3
- - 1
  - 2
  - 3

