src/util/snapshots/betterletter__util__iteration__tests__test_power_set-[_1,_2,_]-false.snap
---
source: src/util/iteration.rs
expression: result
info:
  collection:
    - 1
    - 2
  include_empty_set: false
---
- - 1
- - 2
- - 1
  - 2

