src/util/snapshots/betterletter__util__iteration__tests__test_power_set-[_1,_]-false.snap
---
source: src/util/iteration.rs
expression: result
info:
  collection:
    - 1
  include_empty_set: false
---
- - 1

